[gd_scene load_steps=9 format=3 uid="uid://beimnx40cpxtj"]

[ext_resource type="Script" path="res://Scripts/TopLevel/TextDirector.gd" id="1_l7lms"]
[ext_resource type="PackedScene" uid="uid://b8lpq5o0ugk0n" path="res://Scenes/FunctionalNodes/transform_text.tscn" id="2_78lfu"]
[ext_resource type="PackedScene" uid="uid://b0r3xqm8qh2nw" path="res://Scenes/FunctionalNodes/tokenize_input.tscn" id="3_p303p"]
[ext_resource type="PackedScene" uid="uid://j54nldhfh0rg" path="res://Scenes/FunctionalNodes/game_coordinator.tscn" id="4_7un3v"]
[ext_resource type="PackedScene" uid="uid://fvjyjrtxtbw0" path="res://Scenes/FunctionalNodes/player_mover.tscn" id="5_3l4o4"]
[ext_resource type="Resource" uid="uid://mr8g2ar6gf5b" path="res://Resources/Maps/gas_map.tres" id="6_5b4lb"]
[ext_resource type="Resource" uid="uid://t8ryyhih5yln" path="res://Resources/Rooms/on_the_road.tres" id="8_srps5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_djimx"]
bg_color = Color(0.298039, 0.298039, 0.447059, 1)

[node name="Control" type="Control" node_paths=PackedStringArray("enterHere", "descriptionHere", "headerHere", "headerExtraHere")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l7lms")
enterHere = NodePath("PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LineEdit")
descriptionHere = NodePath("PanelContainer/MarginContainer/VBoxContainer/DescriptionLabel")
headerHere = NodePath("PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer2/HeaderLabel")
headerExtraHere = NodePath("PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer2/HeaderExtraLabel")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_djimx")

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="HeaderLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Gas Station: Inside"

[node name="HeaderExtraLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer2"]
layout_mode = 2
text = "10/15"

[node name="DescriptionLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "You stand in the middle of a gas station store. There are many, slightly aged, [b]TASTY TREATS[/b] to enjoy, and a dull-eyed [b]YOUTH[/b] stood behind the cash register to pester.

The [b]AUTOMATIC DOOR[/b] to the [b]SOUTH[/b] no longer works. You may exit through the [b]BROKEN WINDOW[/b] to the [b]EAST[/b]."

[node name="InventoryLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "In your pockets, you have [b]KEYS[/b], [b]GUM[/b], [b]CREDIT CARD[/b], and [b]DIME[/b]."
fit_content = true
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
text = "TALK"

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
text = "YOUTH"

[node name="LineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "What will you do?"
max_length = 20
flat = true
caret_blink = true

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Enter"

[node name="TransformText" parent="." instance=ExtResource("2_78lfu")]

[node name="GameCoordinator" parent="." instance=ExtResource("4_7un3v")]
currentRoom = ExtResource("8_srps5")
gameMap = ExtResource("6_5b4lb")

[node name="PlayerMover" parent="GameCoordinator" instance=ExtResource("5_3l4o4")]

[node name="TokenizeInput" parent="." instance=ExtResource("3_p303p")]
